--- a/package.json
+++ b/package.json
@@ -1,15 +1,27 @@
 {
+  "private": true,
   "name": "test-percel",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/main.js",
   "scripts": {
+    "start": "electron .",
+    "build": "npm-run-all build:* && electron-builder",
+    "build:app": "parcel build src/main.ts --target electron",
+    "build:web": "parcel build public/index.html",
+    "serve": "parcel public/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Ii Masamitu <arcana278@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "parcel": "^1.11.0"
-  }
+    "electron": "^4.0.6",
+    "electron-builder": "^20.38.5",
+    "npm-run-all": "^4.1.5",
+    "parcel": "^1.11.0",
+    "prettier": "^1.16.4",
+    "typescript": "^3.3.3333"
+  },
+  "dependencies": {}
 }
